-fix: remove collapsible text overlap -fix: transition for collapsible text overlap -style: update green color for links

--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -840,6 +840,43 @@ i.status-indicator-dot {
 			> div {
 				border-bottom: 1px solid #eee;
 				padding-bottom: 8px;
+
+				// For toggling descriptions with more than one line
+				& .flexible-description-box {
+					display: flex;
+					flex-direction: row-reverse;
+					overflow: hidden;
+					justify-content: start;
+					transition: height 350ms ease-in-out;
+					
+					button {
+						position: absolute;
+						right: 10px;
+					}
+
+					p {
+						width: 100%;
+						padding-right: 35px;
+					}
+
+					&.expanded {
+						overflow: hidden;
+						white-space: nowrap;
+
+						p {
+							white-space: normal;
+							word-break: break-word;
+						}
+					}
+					&.collapsed {
+
+						p {
+							overflow: hidden;
+							text-overflow: ellipsis;
+							white-space: nowrap;
+						}
+					}
+				}
 			}
 		}
 		ol {
@@ -853,10 +890,10 @@ i.status-indicator-dot {
 			display: inline-block;
 			> .link {
 				@include user-select(none);
-				color: #00cca3; // temporary?
+				color: #008066; // temporary?
 				cursor:pointer;
 				&:hover {
-					color: #00cca3;
+					color: #008066;
 					text-shadow : 0 0 0;
 				}
 			}
@@ -951,12 +988,14 @@ i.status-indicator-dot {
 		}
 		.detail-embedded-table-container {
 			overflow-x: auto;
+			margin-bottom: 20px;
 			table.detail-embedded-table {
 				min-width: 100%;
 				tr th {
 					white-space: normal;
 					word-break: normal;
 					padding: 7px 4px;
+					text-align: left;
 
 					&.has-children {
 						> .tooltip-info-container {
@@ -981,11 +1020,12 @@ i.status-indicator-dot {
 				tr td {
 					word-break: normal;
 					padding: 7px 8px;
+					text-align: left;
 					&.child-list-row-container {
 						padding: 0;
-						border-left: 1px dotted #ccc;
-						border-right: 1px dotted #ccc;
-						border-bottom: 1px solid #ddd;
+						// border-left: 1px dotted #ccc;
+						// border-right: 1px dotted #ccc;
+						// border-bottom: 1px solid #ddd;
 					}
 					&.no-word-break {
 						white-space: nowrap;
